// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<DocumentFragment>
  <ul />
  <form
    class="NewTodoForm"
  >
    <label
      for="todo"
    >
      Add Todo:
    </label>
    <input
      id="todo"
      name="todo"
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      +
    </button>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot after adding todo 1`] = `
<DocumentFragment>
  <ul>
    <div
      class="Todo"
    >
      <p>
        Wash dishes
      </p>
      <button>
        X
      </button>
    </div>
  </ul>
  <form
    class="NewTodoForm"
  >
    <label
      for="todo"
    >
      Add Todo:
    </label>
    <input
      id="todo"
      name="todo"
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      +
    </button>
  </form>
</DocumentFragment>
`;
